WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195416
Regression(
r242580
) WebKit.NetworkProcessCrashWithPendingConnection API is crashing on iOS debug
https://bugs.webkit.org/show_bug.cgi?id=195416
Summary
Regression(r242580) WebKit.NetworkProcessCrashWithPendingConnection API is cr...
Chris Dumez
Reported
2019-03-07 10:31:38 PST
WebKit.NetworkProcessCrashWithPendingConnection API is crashing on iOS debug after
r242580
: TestWebKitAPI.WebKit.NetworkProcessCrashWithPendingConnection SHOULD NEVER BE REACHED /Volumes/Data/slave/ios-simulator-12-debug/build/Source/WebKit/WebProcess/WebPage/WebPage.cpp(3150) : void WebKit::WebPage::didCompletePageTransition() 1 0x37e41fc69 WTFCrash 2 0x1096f266b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10a79fe6d WebKit::WebPage::didCompletePageTransition() 4 0x10a5fc0a7 WebKit::WebFrameLoaderClient::dispatchDidReachLayoutMilestone(WTF::OptionSet<WebCore::LayoutMilestone>) 5 0x384e904a6 WebCore::FrameLoader::didReachLayoutMilestone(WTF::OptionSet<WebCore::LayoutMilestone>) 6 0x385063fa4 WebCore::FrameView::fireLayoutRelatedMilestonesIfNeeded() 7 0x385065440 WebCore::FrameView::performPostLayoutTasks() 8 0x3850931e8 WebCore::FrameViewLayoutContext::runAsynchronousTasks() 9 0x385094b89 WebCore::FrameViewLayoutContext::runOrScheduleAsynchronousTasks() 10 0x385093e7a WebCore::FrameViewLayoutContext::layout() 11 0x384561194 WebCore::Document::implicitClose() 12 0x384e814bb WebCore::FrameLoader::checkCallImplicitClose() 13 0x384e80f48 WebCore::FrameLoader::checkCompleted() 14 0x384e7f2f5 WebCore::FrameLoader::finishedParsing() 15 0x38457c20f WebCore::Document::finishedParsing() 16 0x384b408e8 WebCore::HTMLConstructionSite::finishedParsing() 17 0x384b88295 WebCore::HTMLTreeBuilder::finished() 18 0x384b49878 WebCore::HTMLDocumentParser::end() 19 0x384b468c5 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() 20 0x384b465c1 WebCore::HTMLDocumentParser::prepareToStopParsing() 21 0x384b498df WebCore::HTMLDocumentParser::attemptToEnd() 22 0x384b499b4 WebCore::HTMLDocumentParser::finish() 23 0x384e2dafa WebCore::DocumentWriter::end() 24 0x384e2ca0f WebCore::DocumentLoader::finishedLoading() 25 0x384e38171 WebCore::DocumentLoader::maybeLoadEmpty() 26 0x384e38305 WebCore::DocumentLoader::startLoadingMainResource() 27 0x384ea9d95 WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::NavigationPolicyDecision, WebCore::AllowNavigationToInvalidURL)::$_11::operator()() 28 0x384ea9989 WTF::Function<void ()>::CallableWrapper<WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::NavigationPolicyDecision, WebCore::AllowNavigationToInvalidURL)::$_11>::call() 29 0x3824ee5ed WTF::Function<void ()>::operator()() const 30 0x38255acd0 WTF::CompletionHandler<void ()>::operator()() 31 0x384e899e9 WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::NavigationPolicyDecision, WebCore::AllowNavigationToInvalidURL)
Attachments
Patch
(2.21 KB, patch)
2019-03-07 10:39 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-03-07 10:39:43 PST
Created
attachment 363894
[details]
Patch
Chris Dumez
Comment 2
2019-03-07 13:50:39 PST
Comment on
attachment 363894
[details]
Patch Clearing flags on attachment: 363894 Committed
r242611
: <
https://trac.webkit.org/changeset/242611
>
Chris Dumez
Comment 3
2019-03-07 13:50:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-03-07 13:51:21 PST
<
rdar://problem/48688960
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug